--- a/configs/foot/foot.ini
+++ b/configs/foot/foot.ini
@@ -8,8 +8,8 @@
 # title=foot
 # locked-title=no
 
-font=Source Code Pro: size=10
-# font=monospace:size=8
+#font=Source Code Pro: size=10
+font=monospace:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
