--- a/configs/foot/foot.ini
+++ b/configs/foot/foot.ini
@@ -49,7 +49,7 @@ color= 141a1b eeeeee
 # underline-thickness=<font underline thickness>
 
 [mouse]
-# hide-when-typing=no
+hide-when-typing=yes
 # alternate-scroll-mode=yes
 
 [colors]
