--- a/configs/foot/foot.ini
+++ b/configs/foot/foot.ini
@@ -2,7 +2,8 @@
 term=foot
 # login-shell=no
 
-font=Hack:size=12
+font=Source Code Pro:size=12
+#font=Hack:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
