--- a/configs/sway/io.conf
+++ b/configs/sway/io.conf
@@ -1,33 +1,16 @@
-### Input configuration
-#
-# Keyboard layout
-  input type:keyboard {
-    xkb_layout us
+input type:keyboard {
+        xkb_layout us
 }
-### Input configuration
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
+
 input type:touchpad {
-      dwt enabled
-      tap enabled
-      natural_scroll enabled
+        dwt enabled
+        tap enabled
+        natural_scroll enabled
 }
-# Touchpad gestures. See "man 5 sway" for the details
 
-# Allow switching between workspaces with left and right swipes (three fingers)
-bindgesture swipe:right workspace prev
-bindgesture swipe:left workspace next
+bindgesture swipe:right workspace prev  # 3-finger swipe action
+bindgesture swipe:left workspace next   # 3-finger swipe action
 
-# Allow toggling floating mode (and vice versa) for selected window
-bindgesture swipe:down floating toggle
-### Output configuration
-#
-# Default wallpaper (handled with Azote)
-exec ~/.azotebg
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs 
+bindgesture swipe:down floating toggle  # toggle floating mode for window
+
+exec ~/.azotebg         # wallpaper
