--- a/configs/sway/config
+++ b/configs/sway/config
@@ -40,24 +40,26 @@ set $term_float footclient -a floating_shell
 ## Application Launcher
 ##
 
-# rofi theme
-set $rofi_theme "* { \
-        lightbg: $background-color; \
-        background: $background-color; \
-        lightfg: $accent-color; \
-        foreground: $text-color; \
-        border-color: $accent-color; \
-} window {border: 2;}"
+set $menu wofi --show run
 
-# rofi config
-set $menu rofi \
-        -show combi \
-        -combi-modi "drun,run" \
-        -terminal $term \
-        -ssh-command "{terminal} {ssh-client} {host} [-p {port}]" \
-        -run-shell-command "{terminal} {cmd}" \
-        -show-icons \
-        -font "$gui-font"
+# rofi theme
+#set $rofi_theme "* { \
+#        lightbg: $background-color; \
+#        background: $background-color; \
+#        lightfg: $accent-color; \
+#        foreground: $text-color; \
+#        border-color: $accent-color; \
+#} window {border: 2;}"
+#
+## rofi config
+#set $menu rofi \
+#        -show combi \
+#        -combi-modi "drun,run" \
+#        -terminal $term \
+#        -ssh-command "{terminal} {ssh-client} {host} [-p {port}]" \
+#        -run-shell-command "{terminal} {cmd}" \
+#        -show-icons \
+#        -font "$gui-font"
 
 ## 
 ## Volume
@@ -233,4 +235,8 @@ input type:touchpad {
        natural_scroll enabled
        middle_emulation enabled
    }
+
+#bar {
+#        swaybar_command waybar
+#}
 
